<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Dashboard"
    android:backgroundTint="@color/background_purple">

    <TextView
        android:id="@+id/tv_deposit_usd"
        style="@style/DashboardTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/refill_title_usd"/>

    <TextView
        android:id="@+id/tv_bonus_title_sum"
        style="@style/DashboardBigDigits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_deposit_usd"
        tools:text="66,790.60$"/>

    <ImageView
        android:id="@+id/iv_info"
        style="@style/InfoIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_error_outline_24"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_bonus_title_sum"
        app:layout_constraintBottom_toTopOf="@id/vg_deposit_rub">
        <TextView
            android:id="@+id/tv_team"
            style="@style/DashboardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/refill_withdraw_title_usd"/>
        <TextView
            android:id="@+id/tv_team_sum"
            style="@style/DashboardMiddleDigits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_team"
            tools:text="95,567.98$"/>
        <ImageView
            android:id="@+id/btn_refill"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="4dp"
            android:background="@drawable/botton_background"
            android:backgroundTint="@color/ligth_gray"
            android:elevation="4dp"
            android:src="@drawable/ic_baseline_add_24"
            app:tint="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/vg_deposit_rub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_stock_title"
            style="@style/DashboardTitle"
            android:text="@string/deposit_rub"
            />
        <TextView
            style="@style/DashboardSmallDigits"
            tools:text="76,456.65"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vg_withdraw_rub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/tv_usd_title"
            style="@style/DashboardTitle"
            android:text="@string/withdraw_rub"/>
        <TextView
            style="@style/DashboardSmallDigits"
            tools:text="56,456.65"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>