<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Dashboard"
    android:backgroundTint="@color/background_green">

    <TextView
        android:id="@+id/tv_profit"
        style="@style/DashboardTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/profit_title"/>

    <TextView
        android:id="@+id/tv_profit_sum"
        style="@style/DashboardBigDigits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profit"
        tools:text="45,590.67$"/>

    <TextView
        android:id="@+id/tv_movement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profit_sum"
        android:textStyle="bold"
        tools:text="78.16%"
        tools:textColor="@color/green"
        />

    <ImageView
        android:id="@+id/iv_movement"
        app:layout_constraintStart_toEndOf="@id/tv_movement"
        app:layout_constraintBottom_toBottomOf="@id/tv_movement"
        style="@style/ArrowIcon"
        tools:src="@drawable/ic_baseline_north_east_24"
        tools:tint="@color/green"
        />

    <ImageView
        android:id="@+id/iv_info"
        style="@style/InfoIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_error_outline_24"
        />

    <LinearLayout
        android:id="@+id/vg_invested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/tv_stock_title"
            style="@style/DashboardTitle"
            android:text="@string/profit_invested"
            />
        <TextView
            style="@style/DashboardSmallDigits"
            tools:text="76,456.65$"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vg_total_coast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/tv_rub_title"
            style="@style/DashboardTitle"
            android:text="@string/profit_total_coast"
            />
        <TextView
            style="@style/DashboardSmallDigits"
            tools:text="56,456.65$"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>