<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Dashboard"
    android:backgroundTint="@color/background_green">

    <TextView
        android:id="@+id/tv_title_1"
        style="@style/DashboardTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/grade_title"/>

    <TextView
        android:id="@+id/tv_sum_1"
        style="@style/DashboardBigDigits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_1"
        tools:text="145,590.67$"/>

    <TextView
        android:id="@+id/tv_movement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sum_1"
        android:textStyle="bold"
        tools:text="78.16%"
        tools:textColor="@color/green"
        />

    <ImageView
        android:id="@+id/iv_movement"
        app:layout_constraintStart_toEndOf="@id/tv_movement"
        app:layout_constraintBottom_toBottomOf="@id/tv_movement"
        style="@style/ArrowIcon"
        tools:src="@drawable/ic_baseline_north_east_24"
        tools:tint="@color/green"
        />

    <ImageView
        android:id="@+id/iv_info"
        style="@style/InfoIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_error_outline_24"
        />

    <ImageView
        android:id="@+id/iv_spreading"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_movement"
        android:src="@drawable/spreading_line"
        />

    <LinearLayout
        android:id="@+id/vg_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:src="@drawable/ic_baseline_circle_24"
            app:tint="@color/purple" />
        <TextView
            android:id="@+id/tv_stock_title"
            style="@style/DashboardTitle"
            android:text="@string/grade_title_stock"
            />
        <TextView
            style="@style/DashboardSmallDigits"
            tools:text="76,456.65$"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vg_usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        app:layout_constraintStart_toEndOf="@id/vg_stock"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        >

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:src="@drawable/ic_baseline_circle_24"
            app:tint="@color/green" />
        <TextView
            android:id="@+id/tv_usd_title"
            style="@style/DashboardTitle"
            android:text="@string/grade_title_usd"/>
        <TextView
            style="@style/DashboardSmallDigits"
            tools:text="56,456.65$"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        app:layout_constraintStart_toEndOf="@id/vg_usd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:src="@drawable/ic_baseline_circle_24"
            app:tint="@color/orange" />
        <TextView
            android:id="@+id/tv_rub_title"
            style="@style/DashboardTitle"
            android:text="@string/grade_title_rub"
            />
        <TextView
            style="@style/DashboardSmallDigits"
            tools:text="56,456.65$"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>