<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Dashboard"
    android:backgroundTint="@color/background_pink">

    <TextView
        android:id="@+id/tv_bonus_title"
        style="@style/DashboardTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/bonus_title"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vg_bonus_title_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bonus_title"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_bonus_title_sum"
            style="@style/DashboardBigDigits"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="66,790.60"/>
        <TextView
            android:id="@+id/tv_rub"
            android:layout_width="37dp"
            android:layout_height="37dp"
            app:layout_constraintStart_toEndOf="@id/tv_bonus_title_sum"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/transparent_botton_background"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:paddingVertical="10dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="RUB"/>
        <TextView
            android:layout_width="37dp"
            android:layout_height="37dp"
            app:layout_constraintStart_toEndOf="@id/tv_rub"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/transparent_botton_background"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingVertical="10dp"
            android:text="USD"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_info"
        style="@style/InfoIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_error_outline_24"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vg_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/vg_bonus_title_sum"
        app:layout_constraintBottom_toTopOf="@id/vg_deposit_rub">
        <TextView
            android:id="@+id/tv_team"
            style="@style/DashboardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/bonus_team"/>
        <ImageView
            android:id="@+id/iv_team"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_team"
            android:background="@drawable/ic_baseline_circle_24"
            android:backgroundTint="@color/black"
            android:padding="4dp"
            android:src="@drawable/team"
            app:tint="@color/white" />
        <TextView
            android:id="@+id/tv_team_sum"
            style="@style/DashboardMiddleDigits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/iv_team"
            app:layout_constraintTop_toBottomOf="@id/tv_team"
            android:layout_marginLeft="8dp"
            tools:text="480"/>
        <ImageView
            android:id="@+id/btn_refill"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="5dp"
            android:background="@drawable/botton_background"
            android:backgroundTint="@color/ligth_gray"
            android:elevation="4dp"
            android:src="@drawable/ic_baseline_person_add_alt_24"
            app:tint="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/vg_deposit_rub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/tv_stock_title"
            style="@style/DashboardTitle"
            android:text="@string/deposit_rub"
            />
        <TextView
            style="@style/DashboardSmallDigits"
            tools:text="76,456.65"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vg_withdraw_rub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/tv_usd_title"
            style="@style/DashboardTitle"
            android:text="@string/withdraw_rub"/>
        <TextView
            style="@style/DashboardSmallDigits"
            tools:text="56,456.65"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>